strict_module/tests/fixtures/bad/r006_bad_kwarg_any.py
"""Bad: typing.Any in **kwargs annotation."""

from typing import Any


class ServiceClass:
    """Service with bad kwarg."""

    def process(self, **kwargs: Any) -> None:
        """Process with Any in kwarg."""
        pass
